--- a/main.html
+++ b/main.html
@@ -6,9 +6,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+	<style>
+		table{
+			width:100%;
+			border-collapse:collapse;
+			
+			
+		}
+		thead{
+			background-color:blue;
+			color:white;
+			text-align:left;
+			
+			
+			
+		}
+		.row3 , .row5 {
+			background-color:grey;
+		}
+		td,th{
+			padding:10px;
+			
+		}
+	</style>
 </head>
 <body>
     <!-- add table here -->
+	<table>
+		<thead>
+			<th>NAME</th>
+			<th>KILLS</th>
+			<th>SAVED</th>
+			<th>DEATHS</th>
+			<th>REVIVES</th>
+			<th>WIN</th>
+		</thead>
+		<tbody>
+			<tr class="row2">
+				<td>Hackerman</td>
+				<td>10</td>
+				<td>0</td>
+				<td>1</td>
+				<td>0</td>
+				<td>0</td>
+			</tr>
+			<tr class="row3">
+				<td>Cool Doggo</td>
+				<td>13</td>
+				<td>4</td>
+				<td>8</td>
+				<td>7</td>
+				<td>1</td>
+			</tr>
+			<tr class="row4">
+				<td>Andrews</td>
+				<td>19</td>
+				<td>2</td>
+				<td>10</td>
+				<td>11</td>
+				<td>0</td>
+			</tr>
+			<tr class="row5">
+				<td>Strawberry</td>
+				<td>2</td>
+				<td>9</td>
+				<td>3</td>
+				<td>5</td>
+				<td>1</td>
+			</tr>
+		</tbody>
+	</table>
 
         
 </body>
